@@ -310,6 +310,7 @@ import org.labkey.api.view.template.PageConfig.Template;
 import org.labkey.api.wiki.WikiRendererType;
 import org.labkey.api.wiki.WikiRenderingService;
 import org.labkey.api.writer.FileSystemFile;
+import org.labkey.api.writer.HtmlWriter;
 import org.labkey.api.writer.ZipFile;
 import org.labkey.api.writer.ZipUtil;
 import org.labkey.bootstrap.ExplodedModuleService;
@@ -843,14 +844,9 @@ public class AdminController extends SpringActionController
         }
 
         @Override
-        public ActionURL getFilesSiteSettingsURL(boolean upgrade)
+        public ActionURL getFilesSiteSettingsURL()
         {
-            ActionURL url = new ActionURL(FilesSiteSettingsAction.class, ContainerManager.getRoot());
-
-            if (upgrade)
-                url.addParameter("upgrade", true);
-
-            return url;
+            return new ActionURL(FilesSiteSettingsAction.class, ContainerManager.getRoot());
         }
 
         @Override
@@ -6855,7 +6851,7 @@ public class AdminController extends SpringActionController
         }
 
         @Override
-        public void renderGridCellContents(RenderContext ctx, Writer out) throws IOException
+        public void renderGridCellContents(RenderContext ctx, Writer oldWriter, HtmlWriter out) throws IOException
         {
             String value = (String)ctx.get(getBoundColumn().getDisplayField().getFieldKey());
 
@@ -6873,7 +6869,7 @@ public class AdminController extends SpringActionController
                         delim = ",<br>";
                     }
                 }
-                out.write(sb.toString());
+                oldWriter.write(sb.toString());
             }
         }
     }
@@ -10300,14 +10296,20 @@ public class AdminController extends SpringActionController
     }
 
     @RequiresPermission(ReadPermission.class)
-    public static class GetFolderTabsAction extends ReadOnlyApiAction
+    public static class GetFolderTabsAction extends ReadOnlyApiAction<Object>
     {
         @Override
         public Object execute(Object form, BindException errors) throws Exception
         {
-            return getContainer().getFolderType().getAppBar(getViewContext(), getPageConfig()).getButtons()
-                    .stream().map(this::getProperties)
-                    .collect(Collectors.toList());
+            var data = getContainer()
+                    .getFolderType()
+                    .getAppBar(getViewContext(), getPageConfig())
+                    .getButtons()
+                    .stream()
+                    .map(this::getProperties)
+                    .toList();
+
+            return success(data);
         }
 
         private Map<String, Object> getProperties(NavTree navTree)
@@ -10438,7 +10440,6 @@ public class AdminController extends SpringActionController
                 MutableSecurityPolicy policy = new MutableSecurityPolicy(SecurityPolicyManager.getPolicy(shortURLRecord));
                 // Add a role assignment to let another group manage the URL. This grants permission to the journal
                 // to change where the URL redirects you to after they copy the data
-//                policy.addRoleAssignment(org.labkey.api.security.SecurityManager.getGroupId(c, "SomeGroup"));
                 SecurityPolicyManager.savePolicy(policy, getUser());
             }
             return true;
